--- a/odin-recipes/recipes/daiquiri.html
+++ b/odin-recipes/recipes/daiquiri.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/css/style.css">
         <meta charset="UTF-8">
         <title>Odin Recipes/Daiquiri</title>
     </head>
-    <body>
+    <body class="recipes">
         <h1>Daiquiri</h1>
         <ul>
             <li>Two cups of crushed ice, plus extra for chilling glass.</li>
