--- a/odin-recipes/html/index.html
+++ b/odin-recipes/html/index.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/css/style.css">
         <meta charset="UTF-8">
         <title>Odin Recipes/Mixology</title>
     </head>
-    <body>
+    <body class="main">
         <h1>Mixology</h1>
-        <p>Whether you enjoy sitting in your warm home sipping your drink of choice,<br>
+        <p class="intro">Whether you enjoy sitting in your warm home sipping your drink of choice,<br>
             or at a social gathering talking politics.<br>
             Here are a couple of different ways you can enjoy your favorite liquors and spirits.</p>
         <h2>Rum</h2>
-        <ul>
-            <li><a href="recipes/pinacolada.html" target="_blank">Pina Colada</a></li>
-            <li><a href="recipes/daiquiri.html" target="_blank">Daiquiri</a></li>
-            <li><a href="recipes/mojito.html" target="_blank">Mojito</a></li>
+        <ul class="selection rum">
+            <li><a href="/recipes/pinacolada.html" target="_blank">Pina Colada</a></li>
+            <li><a href="/recipes/daiquiri.html" target="_blank">Daiquiri</a></li>
+            <li><a href="/recipes/mojito.html" target="_blank">Mojito</a></li>
         </ul>
         <h2>Tequila</h2>
-        <ul>
-            <li><a href="recipes/margarita.html" target="_blank">Classic Margarita</a></li>
-            <li><a href="recipes/paloma.html" target="_blank">Paloma</a></li>
-            <li><a href="recipes/tequilasunrise.html" target="_blank">Tequila Sunrise</a></li>
+        <ul class="selection tequila">
+            <li><a href="/recipes/margarita.html" target="_blank">Classic Margarita</a></li>
+            <li><a href="/recipes/paloma.html" target="_blank">Paloma</a></li>
+            <li><a href="/recipes/tequilasunrise.html" target="_blank">Tequila Sunrise</a></li>
         </ul>
         <h2>Whiskey</h2>
-        <ul>
-            <li><a href="recipes/oldfashioned.html" target="_blank">Old Fashioned</a></li>
-            <li><a href="recipes/whiskeychai.html" target="_blank">Whiskey Chai</a></li>
-            <li><a href="recipes/homemadeeggnog.html" target="_blank">Whiskey Eggnog</a> (homemade)</li>
+        <ul class="selection whiskey">
+            <li><a href="/recipes/oldfashioned.html" target="_blank">Old Fashioned</a></li>
+            <li><a href="/recipes/whiskeychai.html" target="_blank">Whiskey Chai</a></li>
+            <li><a href="/recipes/homemadeeggnog.html" target="_blank">Whiskey Eggnog</a> (homemade)</li>
         </ul>
         <h2>Gin</h2>
-        <ul>
-            <li><a href="recipes/frozenginandtonic.html">Frozen Gin and Tonic</a></li>
-            <li><a href="recipes/vesper.html" target="_blank">Vesper</a>></li>
-            <li><a href="recipes/lemonandlavenderfizz.html" target="_blank">Lemon and Lavender Gin Fizz</a></li>
+        <ul class="selection gin">
+            <li><a href="/recipes/frozenginandtonic.html">Frozen Gin and Tonic</a></li>
+            <li><a href="/recipes/vesper.html" target="_blank">Vesper</a></li>
+            <li><a href="/recipes/lemonandlavenderfizz.html" target="_blank">Lemon and Lavender Gin Fizz</a></li>
         </ul>
-        <a href="sources.html" target="_blank">Sources</a>
+        <a class="selection" href="sources.html" target="_blank">Sources</a>
 
         
     </body>
