--- a/odin-recipes/recipes/frozenginandtonic.html
+++ b/odin-recipes/recipes/frozenginandtonic.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/css/style.css">
         <meta charset="UTF-8">
         <title>Odin Recipes/Frozen Gin and Tonic</title>
     </head>
-    <body>
+    <body class="recipes">
         <h1>Frozen Gin and Tonic</h1>
         <ul>
             <li>Four ounces London Dry gin</li>
