--- a/odin-recipes/recipes/lemonandlavenderfizz.html
+++ b/odin-recipes/recipes/lemonandlavenderfizz.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/css/style.css">
         <meta charset="UTF-8">
         <title>Odin Recipes/Lemon and Lavender Gin Fizz</title>
     </head>
-    <body>
+    <body class="recipes">
         <h1>Lemon and Lavender Gin Fizz</h1>
         <ul>
             <li>One and a half ounces citrusy-herbal gin</li>
