--- a/odin-recipes/recipes/margarita.html
+++ b/odin-recipes/recipes/margarita.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/css/style.css">
         <meta charset="UTF-8">
         <title>Odin Recipes/Margarita</title>
     </head>
-    <body>
+    <body class="recipes">
         <h1>Margarita</h1>
         <ul>
             <li>Two ounces blanco tequila</li>
