--- a/odin-recipes/recipes/mojito.html
+++ b/odin-recipes/recipes/mojito.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/css/style.css">
         <meta charset="UTF-8">
         <title>Odin Recipes/Mojito</title>
     </head>
-    <body>
+    <body class="recipes">
         <h1>Mojito</h1>
         <ul>
             <li>Three mint leaves</li>
