--- a/odin-recipes/recipes/oldfashioned.html
+++ b/odin-recipes/recipes/oldfashioned.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/css/style.css">
         <meta charset="UTF-8">
         <title>Odin Recipes/Old Fashioned</title>
     </head>
-    <body>
+    <body class="recipes">
         <h1>The Old Fashioned</h1>
         <ul>
             <li>One teaspoon sugar</li>
