--- a/odin-recipes/recipes/paloma.html
+++ b/odin-recipes/recipes/paloma.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/css/style.css">
         <meta charset="UTF-8">
         <title>Odin Recipes/Paloma</title>
     </head>
-    <body>
+    <body class="recipes">
         <h1>Paloma</h1>
         <ul>
             <li>Two ounces of tequila</li>
