--- a/odin-recipes/recipes/pinacolada.html
+++ b/odin-recipes/recipes/pinacolada.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/css/style.css">
         <meta charset="UTF-8">
         <title>Odin Recipes/Pina Colada</title>
     </head>
-    <body>
+    <body class="recipes">
         <h1>Pina Colada</h1>
         <ul>
             <li>One and a half cups of ice</li>
