--- a/odin-recipes/recipes/tequilasunrise.html
+++ b/odin-recipes/recipes/tequilasunrise.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/css/style.css">
         <meta charset="UTF-8">
         <title>Odin Recipes/Tequila Sunrise</title>
     </head>
-    <body>
+    <body class="recipes">
         <h1>Tequila Sunrise</h1>
         <ul>
             <li>Two ounces blanco tequila</li>
