--- a/odin-recipes/recipes/whiskeychai.html
+++ b/odin-recipes/recipes/whiskeychai.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/css/style.css">
         <meta charset="UTF-8">
         <title>Odin Recipes/Whiskey Chai</title>
     </head>
-    <body>
+    <body class="recipes">
         <h1>Whiskey Chai</h1>
         <ul>
             <li>Two cinnamon sticks, broken</li>
